--- a/packaging/windows/sc-agent.wxs
+++ b/packaging/windows/sc-agent.wxs
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
+<Wix xmlns="http://wixtoolset.org/schemas/v4/wxs"
+     xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
   <Package Name="Aikido SC-Agent"
            Manufacturer="Aikido Security"
            Version="$(var.Version)"
@@ -30,9 +31,6 @@
       <Component Id="ScAgentExe" Guid="A1B2C3D4-E5F6-7890-ABCD-EF1234567890">
         <File Id="ScAgentExeFile" Source="$(var.BinDir)\sc-agent.exe" KeyPath="yes" />
       </Component>
-      <Component Id="SafeChainExe" Guid="B2C3D4E5-F6A7-8901-BCDE-F12345678901" Condition="EXISTS('$(var.BinDir)\safe-chain.exe')">
-        <File Id="SafeChainExeFile" Source="$(var.BinDir)\safe-chain.exe" KeyPath="yes" />
-      </Component>
     </ComponentGroup>
 
     <!-- Add to PATH -->
@@ -42,14 +40,10 @@
       </Component>
     </DirectoryRef>
 
-    <!-- Custom UI text -->
+    <!-- UI with license -->
     <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)\packaging\windows\license.rtf" />
-
-    <!-- UI -->
-    <UI>
-      <UIRef Id="WixUI_InstallDir" />
-      <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
-    </UI>
+    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
+    <ui:WixUI Id="WixUI_InstallDir" />
 
   </Package>
 </Wix>
