--- a/packaging/windows/AikidoAgent.wxs
+++ b/packaging/windows/AikidoAgent.wxs
@@ -10,27 +10,27 @@
 
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     
-    <Media Id="1" Cabinet="aikido-agent.cab" EmbedCab="yes" />
+    <Media Id="1" Cabinet="AikidoAgent.cab" EmbedCab="yes" />
 
     <!-- Define installation directory structure -->
     <StandardDirectory Id="ProgramFiles64Folder">
       <Directory Id="INSTALLDIR" Name="AikidoSecurity">
-        <Directory Id="AGENTDIR" Name="aikido-agent">
+        <Directory Id="AGENTDIR" Name="AikidoAgent">
           <Directory Id="BINDIR" Name="bin" />
         </Directory>
       </Directory>
     </StandardDirectory>
 
     <!-- Main feature -->
-    <Feature Id="MainFeature" Title="Aikido-Agent" Level="1">
+    <Feature Id="MainFeature" Title="Aikido Agent" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="PathComponent" />
     </Feature>
 
     <!-- Components -->
     <ComponentGroup Id="ProductComponents" Directory="BINDIR">
-      <Component Id="AikidoAgentExe" Guid="3a2f5c8e-e57f-4ce4-ab7f-fa89e94c48cb">
-        <File Id="AikidoAgentExeFile" Source="$(var.BinDir)\aikido-agent.exe" KeyPath="yes" />
+        <Component Id="AikidoAgentExe" Guid="3a2f5c8e-e57f-4ce4-ab7f-fa89e94c48cb">
+        <File Id="AikidoAgentExeFile" Source="$(var.BinDir)\AikidoAgent.exe" KeyPath="yes" />
       </Component>
       <Component Id="SafeChainExe" Guid="e528ac7f-1342-4b26-b87b-1259c6e35f6c">
         <File Id="SafeChainExeFile" Source="$(var.BinDir)\safe-chain.exe" KeyPath="yes" />
