--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs"
      xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
-  <Package Name="Aikido SafeChain Agent"
-           Manufacturer="Aikido Security"
+  <Package Name="SafeChain Agent"
+           Manufacturer="Aikido Security BV"
            Version="$(var.Version)"
            ProductCode="5d8fd7e2-55b5-4fc4-82b2-de8ee83f0061"
            UpgradeCode="adb9d7b9-de00-4953-af0e-9c1e9ec15c81"
