--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -31,6 +31,26 @@
     <ComponentGroup Id="ProductComponents" Directory="BINDIR">
       <Component Id="AikidoAgentExe" Guid="3a2f5c8e-e57f-4ce4-ab7f-fa89e94c48cb">
         <File Id="AikidoAgentExeFile" Source="$(var.BinDir)\SafeChainAgent.exe" KeyPath="yes" />
+        <ServiceInstall Id="SafeChainAgentService"
+                        Name="SafeChainAgent"
+                        DisplayName="SafeChain Agent"
+                        Description="Aikido Security SafeChain Agent - monitors and secures the software supply chain"
+                        Start="auto"
+                        Type="ownProcess"
+                        ErrorControl="normal"
+                        Account="NT AUTHORITY\LocalService" />
+        <ServiceControl Id="SafeChainAgentServiceControl"
+                        Name="SafeChainAgent"
+                        Start="install"
+                        Stop="both"
+                        Remove="uninstall"
+                        Wait="yes" />
+        <ServiceConfigFailureActions ServiceName="SafeChainAgent"
+                                     ResetPeriod="86400">
+          <Failure Action="restart" Delay="5000" />
+          <Failure Action="restart" Delay="10000" />
+          <Failure Action="restart" Delay="30000" />
+        </ServiceConfigFailureActions>
       </Component>
       <Component Id="AikidoSetupExe" Guid="7b4e9d2f-8c3a-4b5e-9f1d-2e6a8c4b7d9e">
         <File Id="AikidoSetupExeFile" Source="$(var.BinDir)\SafeChainSetup.exe" KeyPath="yes" />
