--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -8,7 +8,7 @@
            UpgradeCode="adb9d7b9-de00-4953-af0e-9c1e9ec15c81"
            Scope="perMachine">
 
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+    <MajorUpgrade DowngradeErrorMessage="A newer version of SafeChain Agent is already installed." />
     
     <Media Id="1" Cabinet="SafeChainAgent.cab" EmbedCab="yes" />
 
