--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -46,6 +46,9 @@
                         Remove="uninstall"
                         Wait="yes" />
         <ServiceConfigFailureActions ServiceName="SafeChainAgent"
+                                     OnInstall="yes"
+                                     OnReinstall="yes"
+                                     OnUninstall="no"
                                      ResetPeriod="86400">
           <Failure Action="restart" Delay="5000" />
           <Failure Action="restart" Delay="10000" />
