Update SafeChainAgent service account from LocalService to LocalSystem

--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -38,7 +38,7 @@
                         Start="auto"
                         Type="ownProcess"
                         ErrorControl="normal"
-                        Account="NT AUTHORITY\LocalService" />
+                        Account="LocalSystem" />
         <ServiceControl Id="SafeChainAgentServiceControl"
                         Name="SafeChainAgent"
                         Start="install"
