--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -21,10 +21,22 @@
       </Directory>
     </StandardDirectory>
 
+    <!-- ProgramData directory for cleanup on uninstall -->
+    <StandardDirectory Id="CommonAppDataFolder">
+      <Directory Id="APPDATAAIKIDO" Name="AikidoSecurity">
+        <Directory Id="APPDATAAGENT" Name="SafeChainAgent">
+          <Directory Id="APPDATALOGSDIR" Name="logs" />
+          <Directory Id="APPDATARUNDIR" Name="run" />
+          <Directory Id="APPDATABINDIR" Name="bin" />
+        </Directory>
+      </Directory>
+    </StandardDirectory>
+
     <!-- Main feature -->
     <Feature Id="MainFeature" Title="Aikido Agent" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="PathComponent" />
+      <ComponentRef Id="CleanupProgramData" />
     </Feature>
 
     <!-- Components -->
@@ -55,6 +67,21 @@
     <DirectoryRef Id="BINDIR">
       <Component Id="PathComponent" Guid="5809b6b6-57a0-4c2a-9d55-7b274ceb916a">
         <Environment Id="PATH" Name="PATH" Value="[BINDIR]" Permanent="no" Part="last" Action="set" System="yes" />
+      </Component>
+    </DirectoryRef>
+
+    <!-- Cleanup ProgramData on uninstall -->
+    <DirectoryRef Id="APPDATAAGENT">
+      <Component Id="CleanupProgramData" Guid="c7e8f9a1-2b3c-4d5e-6f7a-8b9c0d1e2f3a">
+        <RemoveFile Id="RemoveLogsFiles" Directory="APPDATALOGSDIR" Name="*" On="uninstall" />
+        <RemoveFile Id="RemoveRunFiles" Directory="APPDATARUNDIR" Name="*" On="uninstall" />
+        <RemoveFile Id="RemoveBinFiles" Directory="APPDATABINDIR" Name="*" On="uninstall" />
+        <RemoveFile Id="RemoveAgentFiles" Name="*" On="uninstall" />
+        <RemoveFolder Id="RemoveLogsDir" Directory="APPDATALOGSDIR" On="uninstall" />
+        <RemoveFolder Id="RemoveRunDir" Directory="APPDATARUNDIR" On="uninstall" />
+        <RemoveFolder Id="RemoveBinDir" Directory="APPDATABINDIR" On="uninstall" />
+        <RemoveFolder Id="RemoveAgentDir" Directory="APPDATAAGENT" On="uninstall" />
+        <RemoveFolder Id="RemoveAikidoDir" Directory="APPDATAAIKIDO" On="uninstall" />
       </Component>
     </DirectoryRef>
 
