Update SafeChainAgent.wxs for product code and upgrade schedule
- Changed ProductCode to a wildcard for automatic generation.
- Modified MajorUpgrade to schedule after installation initialization for improved upgrade handling.

--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -4,11 +4,11 @@
   <Package Name="SafeChain Agent"
            Manufacturer="Aikido Security BV"
            Version="$(var.Version)"
-           ProductCode="275036d6-3abd-40d3-9735-5a2749d77d28"
+           ProductCode="*"
            UpgradeCode="adb9d7b9-de00-4953-af0e-9c1e9ec15c81"
            Scope="perMachine">
 
-    <MajorUpgrade DowngradeErrorMessage="A newer version of SafeChain Agent is already installed." />
+    <MajorUpgrade Schedule="afterInstallInitialize" DowngradeErrorMessage="A newer version of SafeChain Agent is already installed." />
     
     <Media Id="1" Cabinet="SafeChainAgent.cab" EmbedCab="yes" />
 
