Update packaging scripts
(excludes build in build-and-sign-local.sh)

--- a/packaging/windows/SafeChainAgent.wxs
+++ b/packaging/windows/SafeChainAgent.wxs
@@ -58,6 +58,9 @@
                         Remove="uninstall"
                         Wait="yes" />
       </Component>
+      <Component Id="SafeChainAgentUIExe" Guid="8a745110-05f7-4bb8-8013-5fca733409ef">
+        <File Id="SafeChainAgentUIExe" Source="$(var.BinDir)\SafeChainAgentUI.exe" KeyPath="yes" />
+      </Component>
       <Component Id="SafeChainProxyExe" Guid="8a745110-05f7-4bb8-8013-5fca733409ef">
         <File Id="SafeChainProxyExeFile" Source="$(var.BinDir)\SafeChainProxy.exe" KeyPath="yes" />
       </Component>
