--- a/packaging/windows/SafeChainUltimate.wxs
+++ b/packaging/windows/SafeChainUltimate.wxs
@@ -58,8 +58,8 @@
                         Remove="uninstall"
                         Wait="yes" />
       </Component>
-      <Component Id="SafeChainAgentUIExe" Guid="ceafd8b2-da4d-4c92-ace7-8736cdd67162">
-        <File Id="SafeChainAgentUIExe" Source="$(var.BinDir)\SafeChainAgentUI.exe" KeyPath="yes" />
+      <Component Id="SafeChainUltimateUIExe" Guid="ceafd8b2-da4d-4c92-ace7-8736cdd67162">
+        <File Id="SafeChainUltimateUIExe" Source="$(var.BinDir)\SafeChainUltimateUI.exe" KeyPath="yes" />
       </Component>
       <Component Id="SafeChainProxyExe" Guid="8a745110-05f7-4bb8-8013-5fca733409ef">
         <File Id="SafeChainProxyExeFile" Source="$(var.BinDir)\SafeChainProxy.exe" KeyPath="yes" />
