Disable CleanupProgramData component in SafeChainUltimate.wxs to preserve user data during uninstallation

--- a/packaging/windows/SafeChainUltimate.wxs
+++ b/packaging/windows/SafeChainUltimate.wxs
@@ -36,7 +36,7 @@
     <Feature Id="MainFeature" Title="SafeChain Ultimate" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="PathComponent" />
-      <ComponentRef Id="CleanupProgramData" />
+      <!-- <ComponentRef Id="CleanupProgramData" /> -->
     </Feature>
 
     <!-- Components -->
@@ -83,7 +83,7 @@
       <Custom Action="RunTeardown" After="StopServices" Condition="REMOVE=&quot;ALL&quot;" />
     </InstallExecuteSequence>
 
-    <!-- Cleanup ProgramData on uninstall -->
+    <!-- Cleanup ProgramData on uninstall (disabled - preserving data between installs)
     <DirectoryRef Id="APPDATAAGENT">
       <Component Id="CleanupProgramData" Guid="c7e8f9a1-2b3c-4d5e-6f7a-8b9c0d1e2f3a">
         <RemoveFile Id="RemoveLogsFiles" Directory="APPDATALOGSDIR" Name="*" On="uninstall" />
@@ -97,6 +97,7 @@
         <RemoveFolder Id="RemoveAikidoDir" Directory="APPDATAAIKIDO" On="uninstall" />
       </Component>
     </DirectoryRef>
+    -->
 
     <!-- UI with license -->
     <WixVariable Id="WixUILicenseRtf" Value="$(var.ProjectDir)\packaging\windows\license.rtf" />
